# splat-replay

./: .env.example  .example.env  .gitignore  README.md  analyzer.py  capture.py  ffmpeg.py  graceful_thread.py  image_matcher.py  logger_config.py  main.py  obs.py  ocr.py  pyproject.toml  rate.py  recorder.py  requirements.txt  splat_replay.py  start.bat  template_matcher.py  test_capture_device.py  transcriber.py  upload_file.py  uploader.py  youtube.py
assets/: glossary.txt
docs/: specification.md  usage.md
src/: analyzer.py  battle_result.py  editor.py  image_matcher.py  logger_config.py  main.py  recorder.py  speech_recognizer.py  test_capture_device.py  transcriber.py  upload_file.py  uploader.py
src/utility/: os.py
src/wrapper/: capture.py  ffmpeg.py  obs.py  ocr.py  youtube.py
tests/: conftest.py  test_analyzer.py
utility/: os.py  result.py
wrapper/: capture.py  ffmpeg.py  obs.py  ocr.py  youtube.py
